# ndk-videoplayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wind/ndk/videoplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_wind_ndk_videoplayer_VideoPlayer.cpp  com_wind_ndk_videoplayer_VideoPlayer.h
app/src/main/cpp/common/: CommonTools.h
app/src/main/cpp/common/egl_core/: egl_core.h  egl_share_context.cpp  egl_share_context.h  gl_tools.h
app/src/main/cpp/common/message_queue/: handler.h  message_queue.h
app/src/main/cpp/common/opengl_media/: movie_frame.h
app/src/main/cpp/common/opengl_media/render/: video_gl_surface_render.cpp  video_gl_surface_render.h
app/src/main/cpp/common/opengl_media/texture/: texture_frame.cpp  texture_frame.h  yuv_texture_frame.cpp  yuv_texture_frame.h
app/src/main/cpp/common/opengl_media/texture_copier/: texture_frame_copier.h  yuv_texture_frame_copier.cpp  yuv_texture_frame_copier.h
app/src/main/cpp/ffmpeg/include/libavutil/: frame.h
app/src/main/cpp/videoplayer/: audio_output.cpp  audio_output.h  circle_texture_queue.cpp  circle_texture_queue.h  video_output.cpp  video_output.h  video_player.cpp  video_player.h  video_synchronizer.cpp  video_synchronizer.h
app/src/main/cpp/videoplayer/decoder/: decoder_params.cpp  decoder_params.h  ffmpeg_video_decoder.cpp  ffmpeg_video_decoder.h  video_decoder.cpp  video_decoder.h
app/src/main/cpp/videoplayer/texture_uploader/: texture_frame_uploader.cpp  texture_frame_uploader.h  yuv_texture_frame_uploader.cpp  yuv_texture_frame_uploader.h
app/src/main/java/com/wind/ndk/videoplayer/: MainActivity.kt  VideoPlayer.kt  VideoPlayerActivity.kt
app/src/main/res/layout/: activity_videoplayer.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wind/ndk/videoplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
